Fix margin collapse weirdness

--- a/app/src/styles/Storage.less
+++ b/app/src/styles/Storage.less
@@ -135,12 +135,16 @@ nav.volume-nav {
   font-weight: 100;
 }
 
+.pool-topology {
+  padding: 10px 0;
+}
+
 .pool-topology-section {
   min-height: 100px;
 }
 
 .volume-drawer {
-  margin: ( @panel-body-padding + 10px ) 0;
+  margin: @panel-body-padding 0;
 }
 
 .pool-topology-header {
